# FiberyTranscript

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  session.py
audio/: agc.py  capture.py  capture_linux.py  capture_macos.py  capture_windows.py  device_scanner.py  echo_cancellation.py  file_formats.py  health_monitor.py  level_monitor.py  mixer.py  noise_suppressor.py  normalizer.py  post_processor.py  recorder.py  wav_merge.py
config/: constants.py  keystore.py  private_context.example.py  secrets.example.py  session.py  settings.py
integrations/: context_builder.py  fibery_client.py  gemini_client.py
tests/: test_api_bridge.py  test_audio_mixer.py  test_autostart.py  test_capture_windows.py  test_context_builder.py  test_entity_panel.py  test_fibery_client.py  test_formatter.py  test_gemini_client.py  test_health_monitor.py  test_idle_monitor_windows.py  test_lock.py  test_post_processing.py  test_recorder.py  test_session.py  test_settings.py  test_single_instance.py  test_state_machine.py  test_ui_assets.py  test_wav_merge.py  test_webview_cache.py
transcription/: batch.py  formatter.py
ui/: api_bridge.py  entity_panel.py  tray.py  window.py
ui/static/: index.html
ui/static/css/: styles.css
ui/static/js/: app.js  audio-viz.js  settings.js  transcript.js
utils/: autostart.py  filename_utils.py  logging_config.py  platform_utils.py  power_monitor.py  single_instance.py  update_checker.py  webview_cache.py
